--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "frappe-gantt",
-  "version": "0.6.1",
+  "name": "frappe-gantt-with-tree-sidebar",
+  "version": "0.0.1",
   "description": "A simple, modern, interactive gantt library for the web",
   "main": "src/index.js",
   "scripts": {
-    "start": "yarn run dev",
+    "start": "node web-server.mjs",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "jest",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/frappe/gantt.git"
+    "url": "https://github.com/chandora/frappe-gantt-with-tree-sidebar.git"
   },
   "files": [
     "src",
@@ -29,12 +29,12 @@
     "interactive gantt",
     "project management"
   ],
-  "author": "Faris Ansari",
+  "author": "KAWAMURA Tateo",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/frappe/gantt/issues"
+    "url": "https://github.com/chandora/frappe-gantt-with-tree-sidebar/issues"
   },
-  "homepage": "https://github.com/frappe/gantt",
+  "homepage": "https://github.com/chandora/frappe-gantt-with-tree-sidebar",
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
     "eslint": "^4.17.0",
@@ -42,7 +42,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "jest": "^22.2.1",
     "prettier": "^2.6.2",
-    "rollup": "^2.70.2",
+    "rollup": "^2.79.1",
     "rollup-plugin-sass": "^1.2.12",
     "rollup-plugin-terser": "^7.0.2"
   },
