--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,15 @@
 {
-    "extends": ["plugin:prettier/recommended"],
+    "extends": [
+        "plugin:prettier/recommended"
+    ],
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module"
-    }
+    },
+    "prettier/prettier": [
+        "error",
+        {
+            "endOfLine": "auto"
+        }
+    ]
 }
